force-app/main/default/objects/Case/fields/Course_One_Registration_Fee__c.field-meta.xml
<CustomField>
    <fullName>Course_One_Registration_Fee__c</fullName>
    <label>Course One Registration Fee</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>