force-app/main/default/objects/Case/fields/Course_One_Semester__c.field-meta.xml
<CustomField>
    <fullName>Course_One_Semester__c</fullName>
    <label>Course One Semester</label>
    <length>100</length>
    <type>Text</type>
</CustomField>