force-app/main/default/objects/Case/fields/Course_One_Title__c.field-meta.xml
<CustomField>
    <fullName>Course_One_Title__c</fullName>
    <label>Course One Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>