force-app/main/default/objects/Case/fields/Course_One_Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Course_One_Total_Cost__c</fullName>
    <formula>(Course_One_Tuition_Cost__c +  Course_One_Lab_Books_Materials_Cost__c  +  Course_One_Registration_Fee__c + Course_One_Other_Fees__c +  Course_One_Cost_of_Books__c ) -  Course_One_Awards__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course One Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>