force-app/main/default/objects/Case/fields/Course_One_Tuition_Cost__c.field-meta.xml
<CustomField>
    <fullName>Course_One_Tuition_Cost__c</fullName>
    <label>Course One Tuition Cost</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>