force-app/main/default/objects/Case/fields/Course_Three_Ending_Date__c.field-meta.xml
<CustomField>
    <fullName>Course_Three_Ending_Date__c</fullName>
    <label>Course Three Ending Date</label>
    <type>Date</type>
</CustomField>