force-app/main/default/objects/Case/fields/Course_Three_Grade_Received__c.field-meta.xml
<CustomField>
    <fullName>Course_Three_Grade_Received__c</fullName>
    <label>Course Three Grade Received</label>
    <length>30</length>
    <type>Text</type>
</CustomField>