force-app/main/default/objects/Case/fields/Course_Three_Other_Fees_Description__c.field-meta.xml
<CustomField>
    <fullName>Course_Three_Other_Fees_Description__c</fullName>
    <label>Course Three Other Fees Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>