force-app/main/default/objects/Case/fields/Course_Three_Title__c.field-meta.xml
<CustomField>
    <fullName>Course_Three_Title__c</fullName>
    <label>Course Three Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>