force-app/main/default/objects/Case/fields/Course_Three_Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Course_Three_Total_Cost__c</fullName>
    <formula>( Course_Three_Tuition_Cost__c + Course_Three_Lab_Books_Materials_Cost__c + Course_Three_Registration_Fee__c +  Course_Three_Other_Fees__c +  Course_Three_Cost_of_Books__c ) -  Course_Three_Awards__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course Three Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>