force-app/main/default/objects/Case/fields/Course_Two_Awards__c.field-meta.xml
<CustomField>
    <fullName>Course_Two_Awards__c</fullName>
    <label>Course Two Awards/Scholarships/Refunds</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>