force-app/main/default/objects/Case/fields/Course_Two_Beginning_Date__c.field-meta.xml
<CustomField>
    <fullName>Course_Two_Beginning_Date__c</fullName>
    <label>Course Two Beginning Date</label>
    <type>Date</type>
</CustomField>