force-app/main/default/objects/Case/fields/Course_Two_Cost_of_Books__c.field-meta.xml
<CustomField>
    <fullName>Course_Two_Cost_of_Books__c</fullName>
    <label>Course Two Cost of Books</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>