force-app/main/default/objects/Case/fields/Course_Two_Lab_Book_Materials_Cost__c.field-meta.xml
<CustomField>
    <fullName>Course_Two_Lab_Book_Materials_Cost__c</fullName>
    <label>Course Two Lab Fees</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>