force-app/main/default/objects/Case/fields/Course_Two_Other_Fees__c.field-meta.xml
<CustomField>
    <fullName>Course_Two_Other_Fees__c</fullName>
    <label>Course Two Other Fees</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>