force-app/main/default/objects/Case/fields/Course_Two_Registration_Fee__c.field-meta.xml
<CustomField>
    <fullName>Course_Two_Registration_Fee__c</fullName>
    <label>Course Two Registration Fee</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>