force-app/main/default/objects/Case/fields/Course_Two_Semester__c.field-meta.xml
<CustomField>
    <fullName>Course_Two_Semester__c</fullName>
    <label>Course Two Semester</label>
    <picklist>
        <picklistValues>
            <fullName>Fall</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Winter</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Summer</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Spring</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Other</fullName>
        </picklistValues>
        <restrictedPicklist>true</restrictedPicklist>
    </picklist>
    <type>Picklist</type>
</CustomField>