force-app/main/default/objects/Case/fields/Course_Two_Title__c.field-meta.xml
<CustomField>
    <fullName>Course_Two_Title__c</fullName>
    <label>Course Two Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>