force-app/main/default/objects/Case/fields/Course_Two_Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Course_Two_Total_Cost__c</fullName>
    <formula>( Course_Two_Tuition_Cost__c + Course_Two_Lab_Book_Materials_Cost__c + Course_Two_Registration_Fee__c +  Course_Three_Other_Fees__c  +  Course_Two_Cost_of_Books__c ) - Course_Two_Awards__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course Two Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>