force-app/main/default/objects/Case/fields/COVID_19__c.field-meta.xml
<CustomField>
    <fullName>COVID_19__c</fullName>
    <defaultValue>false</defaultValue>
    <label>COVID-19</label>
    <type>Checkbox</type>
</CustomField>