force-app/main/default/objects/Case/fields/Created_By__c.field-meta.xml
<CustomField>
    <fullName>Created_By__c</fullName>
    <formula>IF( CreatedById = $User.Id, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created By</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>