force-app/main/default/objects/Case/fields/Current_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Current_Supervisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the supervisor who will work on a grievance case</description>
    <inlineHelpText>Supervisor who will work on this grievance case. Must be non-union.</inlineHelpText>
    <label>Current Supervisor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases_Supervisor</relationshipName>
    <type>Lookup</type>
</CustomField>