force-app/main/default/objects/Case/fields/Currently_On_LOA__c.field-meta.xml
<CustomField>
    <fullName>Currently_On_LOA__c</fullName>
    <label>Currently on LOA / FMLA</label>
    <picklist>
        <picklistValues>
            <fullName>Yes</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>No</fullName>
        </picklistValues>
    </picklist>
    <type>Picklist</type>
</CustomField>