force-app/main/default/objects/Case/fields/Currently_Receiving_Workers__c.field-meta.xml
<CustomField>
    <fullName>Currently_Receiving_Workers__c</fullName>
    <label>Currently Receiving Workers Compensation</label>
    <picklist>
        <picklistValues>
            <fullName>Yes</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>No</fullName>
        </picklistValues>
        <restrictedPicklist>true</restrictedPicklist>
    </picklist>
    <type>Picklist</type>
</CustomField>