force-app/main/default/objects/Case/fields/CurrentPositionDate__c.field-meta.xml
<CustomField>
    <fullName>CurrentPositionDate__c</fullName>
    <label>Current Position Date</label>
    <type>Date</type>
</CustomField>