force-app/main/default/objects/Case/fields/Date_CAP_Completed__c.field-meta.xml
<CustomField>
    <fullName>Date_CAP_Completed__c</fullName>
    <description>Compliance</description>
    <label>Date CAP Completed</label>
    <type>Date</type>
</CustomField>