force-app/main/default/objects/Case/fields/Date_CAP_Initiated__c.field-meta.xml
<CustomField>
    <fullName>Date_CAP_Initiated__c</fullName>
    <description>Compliance</description>
    <label>Date CAP Initiated</label>
    <type>Date</type>
</CustomField>