force-app/main/default/objects/Case/fields/Date_Check_Was_Cut_If_Applicable__c.field-meta.xml
<CustomField>
    <fullName>Date_Check_Was_Cut_If_Applicable__c</fullName>
    <label>Date Check Was Cut (If Applicable)</label>
    <type>Date</type>
</CustomField>