force-app/main/default/objects/Case/fields/Date_Deficiency_Discovered__c.field-meta.xml
<CustomField>
    <fullName>Date_Deficiency_Discovered__c</fullName>
    <description>Compliance</description>
    <label>Date Deficiency Discovered</label>
    <type>Date</type>
</CustomField>