force-app/main/default/objects/Case/fields/Date_Grant_Deny__c.field-meta.xml
<CustomField>
    <fullName>Date_Grant_Deny__c</fullName>
    <description>The date and time when the record was granted or denied</description>
    <label>Date Decided - Step 1</label>
    <type>DateTime</type>
</CustomField>