force-app/main/default/objects/Case/fields/Date_Grant_Deny_Step2__c.field-meta.xml
<CustomField>
    <fullName>Date_Grant_Deny_Step2__c</fullName>
    <description>The date and time when the record was granted or denied in phase 2</description>
    <label>Date Decided - Step 2</label>
    <type>DateTime</type>
</CustomField>