force-app/main/default/objects/Case/fields/Date_Grievance_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_Grievance_Received__c</fullName>
    <label>Date Grievance Received</label>
    <type>Date</type>
</CustomField>