force-app/main/default/objects/Case/fields/Date_Individual_Notice_Provided__c.field-meta.xml
<CustomField>
    <fullName>Date_Individual_Notice_Provided__c</fullName>
    <description>Compliance</description>
    <label>Date Individual Notice Provided</label>
    <type>Date</type>
</CustomField>