force-app/main/default/objects/Case/fields/Date_of_Activity__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Activity__c</fullName>
    <description>Compliance: associate with task creation</description>
    <label>Date of Activity</label>
    <type>Date</type>
</CustomField>