force-app/main/default/objects/Case/fields/Date_Of_Birth_New__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Birth_New__c</fullName>
    <label>Date Of Birth</label>
    <type>Date</type>
</CustomField>