force-app/main/default/objects/Case/fields/Date_of_Breach_Discovery__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Breach_Discovery__c</fullName>
    <description>Compliance</description>
    <label>Date of Breach Discovery</label>
    <type>Date</type>
</CustomField>