force-app/main/default/objects/Case/fields/Date_of_Breach_Occurence__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Breach_Occurence__c</fullName>
    <description>Compliance</description>
    <label>Date of Breach Occurence</label>
    <type>Date</type>
</CustomField>