force-app/main/default/objects/Case/fields/Date_of_Education__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Education__c</fullName>
    <label>Date of Education</label>
    <type>Date</type>
</CustomField>