force-app/main/default/objects/Case/fields/Date_of_Incident_Case__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Incident_Case__c</fullName>
    <label>Date of Incident</label>
    <type>Date</type>
</CustomField>