force-app/main/default/objects/Case/fields/Date_of_Retro_Submitted_to_Payroll__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Retro_Submitted_to_Payroll__c</fullName>
    <label>Date of Retro Submitted to Payroll</label>
    <type>Date</type>
</CustomField>