force-app/main/default/objects/Case/fields/Date_of_Written_Opinion__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Written_Opinion__c</fullName>
    <description>Date of the Written Opinion</description>
    <label>Date of Written Opinion</label>
    <type>Date</type>
</CustomField>