force-app/main/default/objects/Case/fields/Date_Opened_Year__c.field-meta.xml
<CustomField>
    <fullName>Date_Opened_Year__c</fullName>
    <formula>TEXT(YEAR(DATEVALUE(CreatedDate)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Opened Year</label>
    <type>Text</type>
</CustomField>