force-app/main/default/objects/Case/fields/Date_PAF_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Date_PAF_Submitted__c</fullName>
    <label>Date PAF Submitted</label>
    <type>Date</type>
</CustomField>