force-app/main/default/objects/Case/fields/Date_Received_from_BHR__c.field-meta.xml
<CustomField>
    <fullName>Date_Received_from_BHR__c</fullName>
    <description>The date the case was received from BHR</description>
    <label>Date Received from BHR</label>
    <type>Date</type>
</CustomField>