force-app/main/default/objects/Case/fields/Date_Retro_Closed__c.field-meta.xml
<CustomField>
    <fullName>Date_Retro_Closed__c</fullName>
    <label>Date Retro Closed</label>
    <type>Date</type>
</CustomField>