force-app/main/default/objects/Case/fields/Date_Returned_from_Payroll__c.field-meta.xml
<CustomField>
    <fullName>Date_Returned_from_Payroll__c</fullName>
    <label>Date Returned from Payroll</label>
    <type>Date</type>
</CustomField>