force-app/main/default/objects/Case/fields/Date_Time_EEO_Team_Received_Case__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_EEO_Team_Received_Case__c</fullName>
    <description>Date and Time the EEO team received the EEO case.</description>
    <label>Date/Time EEO Team Received Case</label>
    <type>DateTime</type>
</CustomField>