force-app/main/default/objects/Case/fields/DateErrorBegan__c.field-meta.xml
<CustomField>
    <fullName>DateErrorBegan__c</fullName>
    <label>Date Error Began</label>
    <type>Date</type>
</CustomField>