force-app/main/default/objects/Case/fields/DateFinalPayrollSubmitted__c.field-meta.xml
<CustomField>
    <fullName>DateFinalPayrollSubmitted__c</fullName>
    <label>Date Final Payroll Submitted</label>
    <type>Date</type>
</CustomField>