force-app/main/default/objects/Case/fields/DateForwardedtoPayroll__c.field-meta.xml
<CustomField>
    <fullName>DateForwardedtoPayroll__c</fullName>
    <label>Date Forwarded to Payroll</label>
    <type>Date</type>
</CustomField>