force-app/main/default/objects/Case/fields/DateVerificationSent__c.field-meta.xml
<CustomField>
    <fullName>DateVerificationSent__c</fullName>
    <label>Date Verification Sent</label>
    <type>Date</type>
</CustomField>