force-app/main/default/objects/Case/fields/Degree_In_Progress__c.field-meta.xml
<CustomField>
    <fullName>Degree_In_Progress__c</fullName>
    <label>Degree In Progress</label>
    <picklist>
        <picklistValues>
            <fullName>Bachelors</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Masters</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>PhD</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Associate’s Degree</fullName>
        </picklistValues>
        <restrictedPicklist>true</restrictedPicklist>
    </picklist>
    <type>Picklist</type>
</CustomField>