force-app/main/default/objects/Case/fields/Demographic__c.field-meta.xml
<CustomField>
    <fullName>Demographic__c</fullName>
    <description>Compliance: sits in Type of PHI involved in breach</description>
    <inlineHelpText>Please select all that apply.</inlineHelpText>
    <label>Demographic</label>
    <picklist>
        <picklistValues>
            <fullName>Address/Zip</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Date of Birth</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Drivers License</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Name</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>SSN</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Other Identifier</fullName>
        </picklistValues>
        <restrictedPicklist>true</restrictedPicklist>
    </picklist>
    <type>MultiselectPicklist</type>
</CustomField>