force-app/main/default/objects/Case/fields/Demographic_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Demographic_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Demographic</label>
    <type>Checkbox</type>
</CustomField>