force-app/main/default/objects/Case/fields/Department_Hospital_Equipment_Returned__c.field-meta.xml
<CustomField>
    <fullName>Department_Hospital_Equipment_Returned__c</fullName>
    <label>Department &amp; Hospital Equipment Returned</label>
    <picklist>
        <picklistValues>
            <fullName>Yes</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>No</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Not Applicable</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>TBD</fullName>
        </picklistValues>
        <restrictedPicklist>true</restrictedPicklist>
    </picklist>
    <type>Picklist</type>
</CustomField>