force-app/main/default/objects/Case/fields/Describe_Nature_Of_Grievance__c.field-meta.xml
<CustomField>
    <fullName>Describe_Nature_Of_Grievance__c</fullName>
    <label>Describe Nature Of Grievance</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>