force-app/main/default/objects/Case/fields/Description_of_the_Breach__c.field-meta.xml
<CustomField>
    <fullName>Description_of_the_Breach__c</fullName>
    <description>Compliance</description>
    <label>Description of the Breach</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>