force-app/main/default/objects/Case/fields/Documents_Received_Status__c.field-meta.xml
<CustomField>
    <fullName>Documents_Received_Status__c</fullName>
    <label>Documents Received Status</label>
    <picklist>
        <picklistValues>
            <fullName>Received</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Incomplete</fullName>
        </picklistValues>
    </picklist>
    <type>Picklist</type>
</CustomField>