force-app/main/default/objects/Case/fields/Due_Date_of_CAP__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_of_CAP__c</fullName>
    <description>Compliance</description>
    <label>Due Date of CAP</label>
    <type>Date</type>
</CustomField>