force-app/main/default/objects/Case/fields/e_Learning_Date_of_Education__c.field-meta.xml
<CustomField>
    <fullName>e_Learning_Date_of_Education__c</fullName>
    <label>e-Learning Date of Education</label>
    <type>Date</type>
</CustomField>