force-app/main/default/objects/Case/fields/e_Learning_Number_of_Sessions__c.field-meta.xml
<CustomField>
    <fullName>e_Learning_Number_of_Sessions__c</fullName>
    <label>e-Learning Number of Sessions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>