force-app/main/default/objects/Case/fields/e_Learning_Presenters__c.field-meta.xml
<CustomField>
    <fullName>e_Learning_Presenters__c</fullName>
    <label>e-Learning Presenters</label>
    <type>TextArea</type>
</CustomField>