force-app/main/default/objects/Case/fields/e_Learning_Title__c.field-meta.xml
<CustomField>
    <fullName>e_Learning_Title__c</fullName>
    <label>e-Learning Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>