force-app/main/default/objects/Case/fields/Education_Title__c.field-meta.xml
<CustomField>
    <fullName>Education_Title__c</fullName>
    <label>Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>