force-app/main/default/objects/Case/fields/Educational_Institution__c.field-meta.xml
<CustomField>
    <fullName>Educational_Institution__c</fullName>
    <label>Educational Institution</label>
    <picklist>
        <picklistValues>
            <fullName>Abilene Christian University</fullName>
            <default>true</default>
        </picklistValues>
        <picklistValues>
            <fullName>Aspen University</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Benedictine University</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Chamberlain College of Nursing</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>-- Choose An Option --</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>City Colleges of Chicago</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>DePaul University</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Governors State University</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Grand Canyon</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Herzing University</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Indiana Wesleyan University</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Lewis University</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Loyola University Chicago</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Loyola University School of Nursing</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Maryville University</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>North Park University</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Northwestern University</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Olivet Nazarene University</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>-- Other --</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Purdue Northwest</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Purdue University</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Rasmussen University</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Resurrection University</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Saint Xavier University</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Southern Illinois University Edwardsville</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>UIC (University of Illinois at Chicago)</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>University of Chicago</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>University of Illinois at Chicago</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>University of Phoenix</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>University of St. Francis</fullName>
        </picklistValues>
        <restrictedPicklist>true</restrictedPicklist>
    </picklist>
    <type>Picklist</type>
</CustomField>