force-app/main/default/objects/Case/fields/EEO_Detail__c.field-meta.xml
<CustomField>
    <fullName>EEO_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EEO Detail</label>
    <referenceTo>EEO_Detail__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>EEO_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>