force-app/main/default/objects/Case/fields/Electronic_Signature_Name__c.field-meta.xml
<CustomField>
    <fullName>Electronic_Signature_Name__c</fullName>
    <label>Electronic Signature Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>