force-app/main/default/objects/Case/fields/ElectronicSignature__c.field-meta.xml
<CustomField>
    <fullName>ElectronicSignature__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Electronic Signature</label>
    <type>Checkbox</type>
</CustomField>