force-app/main/default/objects/Case/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Compliance: Free Form email field where compliance team can enter address</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>