force-app/main/default/objects/Case/fields/EmployeePersonalEmail__c.field-meta.xml
<CustomField>
    <fullName>EmployeePersonalEmail__c</fullName>
    <label>Employee Personal Email</label>
    <type>Email</type>
</CustomField>