force-app/main/default/objects/Case/fields/EmployeePersonalEmailAddress__c.field-meta.xml
<CustomField>
    <fullName>EmployeePersonalEmailAddress__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Employee Personal Email Address</label>
    <type>Checkbox</type>
</CustomField>