force-app/main/default/objects/Case/fields/EPO__c.field-meta.xml
<CustomField>
    <fullName>EPO__c</fullName>
    <label>EPO#</label>
    <length>30</length>
    <type>Text</type>
</CustomField>