force-app/main/default/objects/Case/fields/EPO_Accused2_Employee__c.field-meta.xml
<CustomField>
    <fullName>EPO_Accused2_Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Accused2 Employee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases4Vhg</relationshipName>
    <type>Lookup</type>
</CustomField>