force-app/main/default/objects/Case/fields/EPO_Accused2_Non_Employee__c.field-meta.xml
<CustomField>
    <fullName>EPO_Accused2_Non_Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Accused2 Non-Employee</label>
    <referenceTo>NonEmployee__c</referenceTo>
    <relationshipLabel>Cases (Complainant4 Non-Employee)</relationshipLabel>
    <relationshipName>Cases4</relationshipName>
    <type>Lookup</type>
</CustomField>